--- a/index.html
+++ b/index.html
@@ -1,252 +1,332 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PCD Lucky Wheel</title>
-<style>
-:root{
-  --brand:#6e2b74;
-  --shadow:0 8px 30px rgba(0,0,0,.15);
-}
-body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  background:linear-gradient(180deg,#f8e7ff,#ffe6f2,#d9ecff);
-  font-family:-apple-system,BlinkMacSystemFont,"PingFang SC",sans-serif;
-  color:#333;
-}
-.card{
-  background:#fff;
-  border-radius:20px;
-  box-shadow:var(--shadow);
-  padding:20px;
-  width:95%;
-  max-width:420px;
-  text-align:center;
-}
-canvas{
-  width:100%;
-  height:auto;
-  border-radius:50%;
-  box-shadow:inset 0 0 0 12px #f3e4ff;
-}
-.pointer{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-58%);
-  width:60px;
-  height:60px;
-  border-radius:50%;
-  background:radial-gradient(circle,#fff 40%,var(--brand) 45%);
-  z-index:10;
-}
-.pointer::before{
-  content:"";
-  position:absolute;
-  top:-8px;
-  left:50%;
-  transform:translateX(-50%);
-  width:0;
-  height:0;
-  border-left:12px solid transparent;
-  border-right:12px solid transparent;
-  border-bottom:18px solid var(--brand);
-}
-button{
-  margin-top:18px;
-  padding:12px 24px;
-  font-size:18px;
-  font-weight:600;
-  background:linear-gradient(135deg,#f7d1ff,#ffd1d1);
-  border:none;
-  border-radius:16px;
-  cursor:pointer;
-  color:#5a1c6d;
-  box-shadow:var(--shadow);
-}
-button:disabled{opacity:.6;cursor:not-allowed;}
-#status{margin-top:10px;font-size:15px;color:#666;}
-.chips{display:flex;justify-content:center;gap:10px;margin-top:12px;}
-.chip{
-  background:#fff;
-  box-shadow:var(--shadow);
-  border-radius:14px;
-  padding:10px 14px;
-  font-size:14px;
-  font-weight:600;
-}
-.footer{
-  font-size:13px;
-  color:#777;
-  margin-top:16px;
-  line-height:1.5;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+  <title>PCD Lucky Wheel</title>
+  <style>
+    :root{
+      --pink:#ffd1e8; --purple:#cbb2fe; --blue:#b6e1ff; --yellow:#ffe07a;
+      --brand:#6b239d;            /* 深紫（指针/重点） */
+      --btn:#fcd5eb;              /* 你選的淡粉色 */
+      --line:#e6e6e6;
+
+      --s-top: env(safe-area-inset-top, 0px);
+      --s-right: env(safe-area-inset-right, 0px);
+      --s-bottom: env(safe-area-inset-bottom, 0px);
+      --s-left: env(safe-area-inset-left, 0px);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; padding:16px; padding-bottom:calc(16px + var(--s-bottom));
+      background:#fff; /* ✅ 全頁白底 */
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Noto Sans SC","PingFang SC","Microsoft YaHei",sans-serif;
+      color:#222; -webkit-tap-highlight-color:transparent; user-select:none;
+      display:flex; align-items:center; justify-content:center;
+    }
+    .card{
+      width:min(440px,96vw);
+      background:#fff; border:1px solid var(--line); border-radius:16px;
+      box-shadow:0 10px 30px rgba(0,0,0,.04);
+      padding:16px; display:flex; flex-direction:column; align-items:center; gap:12px;
+    }
+    .title{font-weight:800; color:#1a1a1a; text-align:center}
+    .muted{opacity:.8; font-size:12px}
+    #wheelWrap{position:relative}
+    #wheelCanvas{display:block; background:#fff; border-radius:50%; box-shadow:0 6px 18px rgba(0,0,0,.08)}
+    /* ✅ 深紫色指针固定 12 点 */
+    .pointer{
+      position:absolute; top:-8px; left:50%; transform:translateX(-50%);
+      width:0; height:0; border-left:12px solid transparent; border-right:12px solid transparent; border-bottom:22px solid var(--brand);
+      filter:drop-shadow(0 2px 2px rgba(0,0,0,.2));
+    }
+    .row{display:flex; align-items:center; gap:10px}
+    /* ✅ 按鈕粉色、置於轉盤正下方 */
+    #spinBtn{
+      appearance:none; border:1px solid var(--line); cursor:pointer;
+      border-radius:12px; padding:10px 16px; font-weight:800;
+      background:var(--btn); color:#3b2156; font-size:16px; letter-spacing:.2px;
+    }
+    #spinBtn:disabled{opacity:.55; cursor:not-allowed}
+    .pill{
+      padding:8px 12px; border-radius:999px; background:#fafafa; border:1px solid var(--line); font-size:14px;
+      color:#333;
+    }
+    .tip{min-height:38px; text-align:center; font-size:14px}
+    .note{width:100%; font-size:12px; color:#444; text-align:center; line-height:1.4}
+    .sub{
+      display:inline-block; padding:8px 14px; border-radius:999px; border:1px solid var(--line);
+      background:#fff; text-decoration:none; color:#4b0082; font-weight:700;
+    }
+  </style>
 </head>
 <body>
-<div class="card">
-  <div style="position:relative;">
-    <canvas id="wheel" width="350" height="350"></canvas>
-    <div class="pointer"></div>
+  <div class="card">
+    <div class="title">
+      PCD Lucky Wheel<br><span class="muted">幸运转盘 · Lucky Draw</span>
+    </div>
+
+    <div id="wheelWrap">
+      <div class="pointer" aria-hidden="true"></div>
+      <canvas id="wheelCanvas"></canvas>
+    </div>
+
+    <div class="row" aria-live="polite">
+      <button id="spinBtn">🎯 Start / 开始</button>
+      <div id="chance" class="pill">剩余次数 / Chances: --</div>
+    </div>
+
+    <div id="tip" class="tip">每人 3 天可转 1 次 · One spin every 3 days</div>
+
+    <a id="subLink" class="sub" href="#" role="link">Subscribe / 订阅</a>
+
+    <div class="note">
+      ⚠️ 所有奖项不能重叠使用 · Prizes cannot be combined
+    </div>
   </div>
-  <button id="spinBtn">🎡 Start Spin</button>
-  <div id="status"></div>
 
-  <div class="chips">
-    <div id="subBtn" class="chip">✅ Subscribe</div>
-    <div id="shareBtn" class="chip">🔗 Share</div>
-  </div>
+  <!-- Winwheel & TweenMax（1.x 版確保兼容） -->
+  <script src="https://cdn.jsdelivr.net/npm/winwheel@2.8.0/Winwheel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 
-  <div class="footer">
-    ⚠️ 所有奖项不能重叠使用<br>
-    (All rewards cannot be combined)<br>
-    订阅并分享频道可多一次机会 / Subscribe & Share for +1 spin<br>
-    <a href="https://t.me/pcatdolls" target="_blank">🔗 订阅 / Subscribe</a>
-  </div>
-</div>
-
-<script>
-const prizes = [
-  "45⏰ or 60⏰ / 10 off",
-  "45⏰ or 60⏰ / 20 off",
-  "🎁 One more spin chance",
-  "45⏰ or 60⏰ / 10 off",
-  "Sorry 😢",
-  "45⏰ or 60⏰ / 20 off",
-  "Sorry 😢",
-  "45⏰ or 60⏰ / 40 off",
-  "Sorry 😢"
-];
-
-const colors = [
-  "#ffd8e8","#e2d6ff","#d9f0ff","#fff6c2",
-  "#fbd1ff","#d6eaff","#ffead1","#f4dfff","#ffddee"
-];
-
-const wheel = document.getElementById("wheel");
-const ctx = wheel.getContext("2d");
-const n = prizes.length;
-const angleStep = 2 * Math.PI / n;
-let rotation = 0;
-let spinning = false;
-
-function drawWheel(){
-  const r = wheel.width / 2;
-  ctx.clearRect(0,0,wheel.width,wheel.height);
-  ctx.save();
-  ctx.translate(r,r);
-  ctx.rotate(-Math.PI/2);
-  for(let i=0;i<n;i++){
-    ctx.beginPath();
-    ctx.moveTo(0,0);
-    ctx.fillStyle = colors[i%colors.length];
-    ctx.arc(0,0,r,i*angleStep,(i+1)*angleStep);
-    ctx.fill();
-    ctx.save();
-    ctx.rotate(i*angleStep+angleStep/2);
-    ctx.textAlign="center";
-    ctx.fillStyle="#333";
-    ctx.font="bold 14px Arial";
-    ctx.translate(r*0.7,0);
-    ctx.rotate(Math.PI/2);
-    wrapText(ctx,prizes[i],0,0,r*0.4,16);
-    ctx.restore();
-  }
-  ctx.restore();
-}
-
-function wrapText(ctx,text,x,y,maxWidth,lineHeight){
-  const words=text.split(" ");
-  let line="",yy=y;
-  for(let w of words){
-    const test=line+w+" ";
-    if(ctx.measureText(test).width>maxWidth && line){
-      ctx.fillText(line,x,yy);
-      line=w+" ";
-      yy+=lineHeight;
-    } else line=test;
-  }
-  ctx.fillText(line,x,yy);
-}
-
-function periodKey(){
-  const d=new Date();
-  return Math.floor(d.getTime()/(3*86400000)); // 3 days
-}
-
-const KEY="pcd_wheel_v3";
-function loadState(){
-  const s=JSON.parse(localStorage.getItem(KEY)||"{}");
-  if(s.period!==periodKey()) return {period:periodKey(),used:0,sub:false,share:false};
-  return s;
-}
-let state=loadState();
-function save(){localStorage.setItem(KEY,JSON.stringify(state));}
-function allowance(){return 1+(state.sub&&state.share?1:0);}
-function remaining(){return Math.max(0,allowance()-state.used);}
-function updateStatus(){
-  document.getElementById("status").innerHTML=`剩余次数 / Spins left: ${remaining()}`;
-}
-
-function spin(){
-  if(spinning || remaining()<=0) return alert("No spins left!");
-  spinning=true;
-  const index=Math.floor(Math.random()*n);
-  const target=-Math.PI/2 - (index*angleStep+angleStep/2);
-  const extra=2*Math.PI*5;
-  const finalRot=rotation+extra+target;
-  const start=performance.now(),duration=4200;
-  const step=t=>{
-    const p=Math.min(1,(t-start)/duration);
-    const ease=1-Math.pow(1-p,3);
-    rotation+= (finalRot-rotation)*ease;
-    drawWheel();
-    if(p<1) requestAnimationFrame(step);
-    else{
-      rotation%=2*Math.PI;
-      const result=prizes[index];
-      finish(result);
+  <script>
+  (function(){
+    // ===== Telegram 初始化與訂閱跳轉 =====
+    const isTG = !!(window.Telegram && Telegram.WebApp);
+    if(isTG){
+      Telegram.WebApp.ready();
+      Telegram.WebApp.expand && Telegram.WebApp.expand();
+      document.getElementById('subLink').addEventListener('click', function(e){
+        e.preventDefault();
+        Telegram.WebApp.openTelegramLink("https://t.me/pcatdolls");
+      });
+    }else{
+      document.getElementById('subLink').setAttribute('href','https://t.me/pcatdolls');
     }
-  };
-  requestAnimationFrame(step);
-}
 
-function finish(result){
-  if(result.includes("One more spin")){
-    alert("🎁 One more spin added!");
-  } else {
-    state.used++;
-    alert("🎉 Result: "+result);
-  }
-  save();updateStatus();
-  if(window.Telegram?.WebApp){
-    window.Telegram.WebApp.sendData(JSON.stringify({
-      result,used:state.used,remaining:remaining(),
-      subscribed:state.sub,shared:state.share,
-      period:periodKey(),lang:navigator.language
-    }));
-  }
-  spinning=false;
-  document.getElementById("spinBtn").disabled = remaining()<=0;
-}
+    // ===== 精準尺寸 + 高 DPI 自適應 =====
+    const canvas = document.getElementById('wheelCanvas');
+    const ctx = canvas.getContext('2d');
+    const card = document.querySelector('.card');
+    const wheelWrap = document.getElementById('wheelWrap');
+    const titleEl = document.querySelector('.title');
+    const rowEl = document.querySelector('.row') || document.querySelector('div[aria-live]');
+    const tipEl = document.getElementById('tip');
+    const subEl = document.getElementById('subLink');
+    const noteEl = document.querySelector('.note');
+    const DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
 
-document.getElementById("spinBtn").onclick=spin;
-document.getElementById("subBtn").onclick=()=>{
-  window.open("https://t.me/pcatdolls","_blank");
-  state.sub=true;save();updateStatus();
-};
-document.getElementById("shareBtn").onclick=()=>{
-  window.open(`https://t.me/share/url?url=${encodeURIComponent(location.href)}&text=🎡PCD+Lucky+Wheel`,"_blank");
-  state.share=true;save();updateStatus();
-};
+    function getViewportHeight(){
+      if (window.Telegram && Telegram.WebApp && (Telegram.WebApp.viewportStableHeight || Telegram.WebApp.viewportHeight)){
+        return Math.round(Telegram.WebApp.viewportStableHeight || Telegram.WebApp.viewportHeight);
+      }
+      return window.innerHeight;
+    }
+    function measure(el){ return el ? el.getBoundingClientRect().height : 0; }
+    function cssPx(n){ return Math.max(0, Math.floor(n)); }
 
-drawWheel();updateStatus();
-</script>
+    function layoutWheel(){
+      const vh = getViewportHeight();
+      const bodyStyle = getComputedStyle(document.body);
+      const bodyPadV = parseFloat(bodyStyle.paddingTop) + parseFloat(bodyStyle.paddingBottom);
+
+      const cardStyle = getComputedStyle(card);
+      const padV = parseFloat(cardStyle.paddingTop) + parseFloat(cardStyle.paddingBottom);
+
+      const hTitle = measure(titleEl);
+      const hRow   = measure(rowEl);
+      const hTip   = measure(tipEl);
+      const hSub   = measure(subEl);
+      const hNote  = measure(noteEl);
+      const gaps   = 12 * 4;
+
+      const maxCardH = vh - bodyPadV - 8;
+      const otherHeights = padV + hTitle + hRow + hTip + hSub + hNote + gaps;
+
+      const cardW = card.getBoundingClientRect().width;
+      const maxByHeight = Math.max(220, maxCardH - otherHeights);
+      const maxByWidth  = Math.max(220, cardW - 8*2);
+      const ideal = Math.min(maxByHeight, maxByWidth);
+
+      const CSS_SIZE = cssPx(Math.max(240, Math.min(ideal, 420))); // 240–420px
+
+      canvas.style.width  = CSS_SIZE + 'px';
+      canvas.style.height = CSS_SIZE + 'px';
+      canvas.width  = CSS_SIZE * DPR;
+      canvas.height = CSS_SIZE * DPR;
+      ctx.setTransform(DPR, 0, 0, DPR, 0, 0);
+
+      if (window.__pcdWheel) {
+        window.__pcdWheel.outerRadius = (CSS_SIZE / 2) - 2;
+        window.__pcdWheel.draw(false);
+      }
+
+      const pointer = wheelWrap.querySelector('.pointer');
+      if (pointer){ pointer.style.top = '-8px'; } // 固定 12 點
+    }
+
+    // ===== 使用者身份 + 次數限制（3 天一次，bonus 可疊加）=====
+    const userObj = (isTG && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) || null;
+    const userId = userObj ? String(userObj.id) : 'guest';
+    const userName = userObj ? ((userObj.first_name || '') + (userObj.last_name ? (' ' + userObj.last_name) : '')) : 'Guest';
+    const userHandle = userObj && userObj.username ? ('@' + userObj.username) : '';
+    const STORAGE_KEY = 'pcd_wheel_' + userId;
+
+    function readState(){
+      try {
+        const raw = localStorage.getItem(STORAGE_KEY);
+        if(!raw) return { lastBaseSpinISO: null, bonus: 0 };
+        const obj = JSON.parse(raw);
+        return { lastBaseSpinISO: obj.lastBaseSpinISO || null, bonus: obj.bonus|0 };
+      } catch(e){
+        return { lastBaseSpinISO: null, bonus: 0 };
+      }
+    }
+    function writeState(s){ localStorage.setItem(STORAGE_KEY, JSON.stringify(s)); }
+    function baseAvailable(now = new Date()){
+      const st = readState();
+      if(!st.lastBaseSpinISO) return true;
+      const diff = now - new Date(st.lastBaseSpinISO);
+      return diff >= 3*24*60*60*1000; // 3 天
+    }
+    function totalChances(){
+      const st = readState();
+      return (baseAvailable()?1:0) + (st.bonus|0);
+    }
+    function consumeChance(){
+      const st = readState();
+      if(st.bonus > 0){ st.bonus -= 1; }
+      else { st.lastBaseSpinISO = new Date().toISOString(); }
+      writeState(st);
+    }
+    function addBonus(n=1){
+      const st = readState();
+      st.bonus = (st.bonus|0) + n;
+      writeState(st);
+    }
+
+    // ===== UI =====
+    const $btn = document.getElementById('spinBtn');
+    const $chance = document.getElementById('chance');
+    const $tip = document.getElementById('tip');
+    function toast(msg){ $tip.textContent = msg; }
+    function updateChances(){
+      $chance.textContent = '剩余次数 / Chances: ' + totalChances();
+      $btn.disabled = totalChances() <= 0;
+    }
+
+    // ===== 獎項（9 項，粉/紫/藍/黃）=====
+    const segs = [
+      { fillStyle:'#ffd1e8', text:'45⏰ or 60⏰/ 10 off' },
+      { fillStyle:'#cbb2fe', text:'45⏰ or 60⏰/ 20 off' },
+      { fillStyle:'#b6e1ff', text:'One more spin chance' },
+      { fillStyle:'#ffe07a', text:'45⏰ or 60⏰/ 10 off' },
+      { fillStyle:'#ffd1e8', text:'Sorry 😢' },
+      { fillStyle:'#cbb2fe', text:'45⏰ or 60⏰/ 20 off' },
+      { fillStyle:'#b6e1ff', text:'Sorry 😢' },
+      { fillStyle:'#ffe07a', text:'45⏰ or 60⏰/ 40 off' },
+      { fillStyle:'#ffd1e8', text:'Subscribe and share channel' }
+    ];
+
+    // ===== 建立輪盤（半徑將由 layoutWheel 覆蓋）=====
+    const wheel = new Winwheel({
+      canvasId:'wheelCanvas',
+      numSegments: segs.length,
+      outerRadius: 160,
+      textFontSize: 14,
+      textAlignment: 'center',
+      textFillStyle: '#333',
+      segments: segs,
+      animation:{
+        type:'spinToStop',
+        duration:5,
+        spins:8,
+        callbackFinished:onFinished,
+        callbackBefore: function(){ $btn.disabled = true; },
+      }
+    });
+    window.__pcdWheel = wheel;
+
+    // 初次布局與監聽
+    layoutWheel();
+    updateChances();
+    if (window.Telegram && Telegram.WebApp && Telegram.WebApp.onEvent){
+      Telegram.WebApp.onEvent('viewportChanged', layoutWheel);
+    }
+    window.addEventListener('resize', layoutWheel);
+    new ResizeObserver(layoutWheel).observe(card);
+
+    // ===== 旋轉流程 =====
+    let spinning = false;
+    $btn.addEventListener('click', () => {
+      if(spinning) return;
+      if(totalChances() <= 0){
+        const msg = '每人 3 天可转 1 次；抽到「One more spin chance / Subscribe and share channel」可加 1 次。\nOne spin every 3 days. Landing on bonus tiles grants +1 chance.';
+        if(isTG && Telegram.WebApp.showAlert) Telegram.WebApp.showAlert(msg);
+        else alert(msg);
+        return;
+      }
+      spinning = true;
+      consumeChance();
+      updateChances();
+      $btn.textContent = '🎰 旋转中 / Spinning…';
+      toast('祝你好运！Good luck!');
+      wheel.startAnimation();
+      setTimeout(()=>{ spinning = false; }, 5200);
+    });
+
+    // ===== 結果處理與回傳 =====
+    function onFinished(segment){
+      const result = segment?.text || '';
+      $btn.textContent = '🎯 Start / 开始';
+      $btn.disabled = totalChances() <= 0;
+
+      const isOneMore = /One more spin chance/i.test(result);
+      const isSubscribe = /Subscribe and share channel/i.test(result);
+
+      if(isOneMore){
+        addBonus(1);
+        updateChances();
+        notify('获得 +1 次机会 · +1 extra chance');
+      }else if(isSubscribe){
+        addBonus(1);
+        updateChances();
+        if(isTG) Telegram.WebApp.openTelegramLink("https://t.me/pcatdolls");
+        notify('订阅成功 +1 次机会 · +1 extra chance added');
+      }else if(/Sorry/i.test(result)){
+        notify('谢谢参与 · Thanks for playing');
+      }else{
+        notify('恭喜中奖：' + result + '\nCongratulations!');
+      }
+
+      const userObj = (isTG && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) || null;
+      const userName = userObj ? ((userObj.first_name || '') + (userObj.last_name ? (' ' + userObj.last_name) : '')) : 'Guest';
+      const userHandle = userObj && userObj.username ? ('@' + userObj.username) : '';
+      const payload = `Winner: ${userName}${userHandle ? ' ' + userHandle : ''} | Result: ${result}`;
+      if(isTG && Telegram.WebApp.sendData){
+        try { Telegram.WebApp.sendData(payload); } catch(e){}
+      }
+
+      try{
+        if(isTG && Telegram.WebApp.HapticFeedback){
+          Telegram.WebApp.HapticFeedback.notificationOccurred('success');
+        }
+      }catch(e){}
+    }
+
+    function notify(message){
+      if(isTG && Telegram.WebApp.showPopup){
+        Telegram.WebApp.showPopup({ title:'PCD Lucky Wheel', message, buttons:[{type:'ok', id:'ok'}] });
+      }else if(isTG && Telegram.WebApp.showAlert){
+        Telegram.WebApp.showAlert(message);
+      }else{
+        alert(message);
+      }
+      toast(message.replace(/\n/g,' · '));
+      updateChances();
+    }
+  })();
+  </script>
 </body>
 </html>
